<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/imgViewTopLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_logo_together"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/mainGuideLine" />

    <ImageButton
        android:id="@+id/imgBtnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:background="@drawable/ic_circular_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgViewTopLogo" />

    <TextView
        android:id="@+id/txtViewMainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/home_we_need_to_talk"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgViewTopLogo" />

    <ImageView
        android:layout_marginTop="12dp"
        android:id="@+id/imgViewMainLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_man_woman_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtViewMainText" />

    <TextView
        android:id="@+id/txtViewHumanHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:lines="3"
        android:maxLines="3"
        android:text="@string/find_help"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llActionButtons"
        app:layout_constraintTop_toBottomOf="@id/imgViewMainLogo" />

    <LinearLayout
        android:id="@+id/llActionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnPrimary"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_main_button"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/call_180"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnSecondary"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/background_main_button"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/safe_contacts"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>